# clickmem

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  design.md  pyproject.toml  setup.sh
.github/workflows/: dashboard.yml  release.yml  test.yml
claude-hooks/hooks/: hooks.json
clickmem-hook/: HOOK.md  handler.js
clickmem-plugin/: index.js
clickmem-plugin/lib/: capture.js  cli.js  recall.js
cursor-hooks/: hook-handler.js  package.json
cursor-hooks/.cursor-plugin/: plugin.json
cursor-hooks/hooks/: clickmem-stop.ts  hooks.json
cursor-hooks/lib/: clickmem-client.js  handlers.js  utils.js
docs/: periodic-review-plan.md  recall-test-cases.md  reference.md
examples/: claude-code-hooks-local.json  claude-code-hooks-remote.json  mcp-claude-code-local.json  mcp-claude-code-remote.json  mcp-cursor-local.json
scripts/: audit_install.py  cleanup_data.py
scripts/audit_install_helpers/: __init__.py  manual.py  mcp_client.py  report.py  runner.py  sandbox.py  tier1_checks.py  tier2_checks.py
skills/clickmem/: SKILL.md
skills/clickmem-research/: SKILL.md
src/clickmem/: __init__.py  __main__.py  agents.py  blacklist.py  cli.py  config.py  conflicts.py  embedding.py  events.py  history.py  hooks_install.py  import_docs.py  local_or_remote.py  mcp_server.py  memories.py  models.py  portable.py  projects.py  raw.py  recall.py  schema.py  server.py  service.py  skill_install.py  sqlutil.py  stats.py  transport.py
src/memory_core/: db.py  (+35 more)
tests/: __init__.py  conftest.py  run_recall_eval.py  test_adapters.py  test_auto_research.py  test_blacklist.py  test_ceo_db.py  test_ceo_dedup.py  test_ceo_extractor.py  test_ceo_maintenance_prune.py  test_ceo_retrieval.py  test_claude_memory_sync.py  test_cli.py  test_conflicts.py  test_context_engine.py  test_conversation_filter.py  test_db.py  test_edge_cases.py  test_embedding.py  test_events.py  test_extractor.py  test_forget.py  test_history.py  test_import_docs.py  test_import_openclaw.py  test_integration.py  test_json_utils.py  test_llm_modes.py  test_local_llm.py  test_local_or_remote.py  test_maintenance.py  test_mcp_server.py  test_mcp_smoke.py  test_md_sync.py  test_memories.py  test_models.py  test_portable.py  test_project_detect.py  test_projects.py  test_properties.py  (+16 more)
(+71 files in other folders)
