[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "clickmem"
version = "1.0.0"
description = "Local-first explicit-memory system for AI coding agents, backed by chDB or ClickHouse Cloud."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "auxten" }]
keywords = ["memory", "agents", "llm", "clickhouse", "chdb", "mcp", "rag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "chdb>=2.0",
    "clickhouse-connect>=0.7",
    "sentence-transformers>=3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "mcp>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "zeroconf>=0.131",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "freezegun>=1.4",
]

[project.scripts]
clickmem = "clickmem.cli:app"
clickmem-mcp = "clickmem.mcp_server:main_stdio"

[project.urls]
Homepage = "https://github.com/auxten/clickmem"
Repository = "https://github.com/auxten/clickmem"
Issues = "https://github.com/auxten/clickmem/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clickmem"]

[tool.hatch.build.targets.wheel.force-include]
"src/clickmem/dashboard/dist" = "clickmem/dashboard/dist"

[tool.hatch.build.targets.sdist]
include = [
    "src/clickmem",
    "README.md",
    "AGENTS.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "slow: slower property/integration tests excluded from fast loop",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
